fixed name hidden by speech bubble issue in battle comp on style and media queries

--- a/public/style.css
+++ b/public/style.css
@@ -395,12 +395,24 @@ footer img {
   border-radius: 50%;
 }
 
+.name_bubbleWrap{
+  position: relative;
+}
+
+.name_bubbleWrap h2 {
+  width: 100%;
+  position: absolute;
+  top: -14%;
+  right: 50%;
+  transform: translateX(50%);
+}
+
 #playerImg {
  left: -2rem;
 }
 
 .speechBubble {
-  margin: -3rem 0;
+  /* margin: -3rem 0; */
   width: 100%;
   height: 20rem; 
   display: flex;
@@ -408,6 +420,7 @@ footer img {
   align-items: center;
   position: relative;
   line-height: 1.7rem;
+  position: relative;
 }
 
 .speechBubble img {
@@ -443,6 +456,8 @@ footer img {
   transform: translate(50%, -50%);
   z-index: 500;
 }
+
+
 
 #playerSpeech_flipped {
   -moz-transform: scaleX(-1);
@@ -482,6 +497,7 @@ footer img {
 }
 
 .healthBar_div {
+  margin-bottom: 2rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
