--- a/public/style_mediaqueries.css
+++ b/public/style_mediaqueries.css
@@ -54,7 +54,7 @@
   width: 25rem;
 }
 .totalWins {
-  font-size: 2.4rem;
+  font-size: 2rem;
   width: 33%;
   }
 
@@ -91,6 +91,10 @@
     order: 1
   }
 
+  .name_bubbleWrap h2 {
+    top: 0;
+  }
+
   .speechBubble {
     order: 2;
   }
@@ -106,7 +110,7 @@
   }
 
   .speechBubble {
-    height: 40rem;
+    height: auto;
   }
 
   .fighter_info:nth-of-type(1){
@@ -121,10 +125,10 @@
     height: 2.0rem;
     width: 30rem;
   }
-  .totalWins {
-    font-size: 3.4rem;
+  /* .totalWins {
+    font-size: 3.2rem;
     width: 33%;
-    }
+    } */
 
     footer img {
       bottom: -6rem;
